; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_input.c_compute_adler32_of_screen.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_input.c_compute_adler32_of_screen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Z_NULL = common dso_local global i8* null, align 8
@Screen_HEIGHT = common dso_local global i32 0, align 4
@Screen_atari = common dso_local global i64 0, align 8
@Screen_WIDTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @compute_adler32_of_screen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compute_adler32_of_screen() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i8*, i8** @Z_NULL, align 8
  %4 = call i32 @adler32(i32 0, i8* %3, i32 0)
  store i32 %4, i32* %2, align 4
  store i32 0, i32* %1, align 4
  br label %5

5:                                                ; preds = %20, %0
  %6 = load i32, i32* %1, align 4
  %7 = load i32, i32* @Screen_HEIGHT, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %23

9:                                                ; preds = %5
  %10 = load i32, i32* %2, align 4
  %11 = load i64, i64* @Screen_atari, align 8
  %12 = inttoptr i64 %11 to i8*
  %13 = getelementptr inbounds i8, i8* %12, i64 24
  %14 = load i32, i32* @Screen_WIDTH, align 4
  %15 = load i32, i32* %1, align 4
  %16 = mul nsw i32 %14, %15
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i8, i8* %13, i64 %17
  %19 = call i32 @adler32(i32 %10, i8* %18, i32 336)
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %9
  %21 = load i32, i32* %1, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %1, align 4
  br label %5

23:                                               ; preds = %5
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @adler32(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
